# csv2xltabular

./: .gitignore  CMakeLists.txt  LICENSE  README.md  csv2xltabular.cpp  csv2xltabular.h  data.csv  main.cpp  settings.ini
libs/csvparser/: CMakeLists.txt  csvParser.cpp  csvParser.h
libs/iniparser/: CMakeLists.txt  IniParser.cpp  IniParser.h
